fix: updated modd configuration

--- a/modd.conf
+++ b/modd.conf
@@ -2,7 +2,7 @@ modd.conf
 **/*.go {
 	prep: "
 		# run tests
-		go test -cover @dirmods
+		make test
 	"
 }
 
@@ -11,7 +11,7 @@ modd.conf
 !**/*_test.go {
     prep: "
 	    # build
-	    go build -v -tags dev
+	    make build
     "
 }
 
@@ -27,5 +27,5 @@ modd.conf
 **/*.html
 **/*.js
 shiori {
-    daemon: ./shiori serve -p 5061
+    daemon: make serve
 }
